Неделя 3. Флексы и примеси
Флексы в предложках, пэйджлайне, навигации.
Примеси в предложках, чтобы можно было переиспользовать.

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
               </address>
             </div>
           </header>
-          <div class="hero__content"> <!--первый блок-->
+          <section class="hero__content"> <!--первый блок-->
             <div class="hero__text-content">
               <h1 class="hero__title">Не отказывай себе в желании быть первым</h1>
               <h4 class="hero__subtitle">Банк с львиным характером</h4>
               <a href="#" class="btn btn_color_ginger">Подробнее</a> <!--модификатор ключ-значение-->            
             </div>
-          </div>
+          </section>
         </div>        
       </div>
       
@@ -54,74 +54,74 @@
         <div class="container">
           <h2 class="section__title">Лучшие предложения банка</h2>
           <ul class="offers">
-            <li class="offers__item offers__item_theme_grey"> <!--модификатор ключ-значение-->            
-              <div class="offers__header">
-                <img src="./images/icons/cards/card_grey.png" alt="grey card" class="offers__header-img">
+            <li class="offers__item offer offer__item_theme_grey"> <!--модификатор ключ-значение--> <!--примесь для переиспользования блока при необходимости-->              
+              <div class="offer__header">
+                <img src="./images/icons/cards/card_grey.png" alt="grey card" class="offer__header-img">
               </div>
-              <div class="offers__content">
-                <h3 class="offers__title">Карта «Базовая»</h3>
-                <div class="offers__prices">
-                  <div class="offers__prices-cell">
-                    <div class="offers__price">60 Р.-</div>
-                    <div class="offers__price-desc">Обслуживание карты</div>
+              <div class="offer__content">
+                <h3 class="offer__title">Карта «Базовая»</h3>
+                <div class="offer__prices">
+                  <div class="offer__prices-cell">
+                    <div class="offer__price">60 Р.-</div>
+                    <div class="offer__price-desc">Обслуживание карты</div>
                   </div>
-                  <div class="offers__prices-cell">
-                    <div class="offers__price">
+                  <div class="offer__prices-cell">
+                    <div class="offer__price">
                       <!--для того, чтобы сделать "до" меньше-->
-                      <span class="offers__price-range">до</span> 4%
+                      <span class="offer__price-range">до</span> 4%
                     </div>
-                    <div class="offers__price-desc">Кэшбек за любые покупки</div>
+                    <div class="offer__price-desc">Кэшбек за любые покупки</div>
                   </div>
                 </div>
-                <div class="offers__btn-wrapper">
+                <div class="offer__btn-wrapper">
                   <a href="#" class="btn btn_color_black">Подробнее</a> <!--модификатор ключ-значение-->                
                 </div>
               </div>
             </li>
-            <li class="offers__item offers__item_theme_blue"> <!--модификатор ключ-значение-->            
-              <div class="offers__header">
-                <img src="./images/icons/cards/card_blue.png" alt="blue card" class="offers__header-img">
+            <li class="offers__item offer offer__item_theme_blue"> <!--модификатор ключ-значение--> <!--примесь для переиспользования блока при необходимости-->           
+              <div class="offer__header">
+                <img src="./images/icons/cards/card_blue.png" alt="blue card" class="offer__header-img">
               </div>
-              <div class="offers__content">
-                <h3 class="offers__title">Карта «Оптима»</h3>
-                <div class="offers__prices">
-                  <div class="offers__prices-cell">
-                    <div class="offers__price">90 Р.-</div>
-                    <div class="offers__price-desc">Обслуживание карты</div>
+              <div class="offer__content">
+                <h3 class="offer__title">Карта «Оптима»</h3>
+                <div class="offer__prices">
+                  <div class="offer__prices-cell">
+                    <div class="offer__price">90 Р.-</div>
+                    <div class="offer__price-desc">Обслуживание карты</div>
                   </div>
-                  <div class="offers__prices-cell">
-                    <div class="offers__price">
+                  <div class="offer__prices-cell">
+                    <div class="offer__price">
                       <!--для того, чтобы сделать "до" меньше-->
-                      <span class="offers__price-range">до</span> 5%
+                      <span class="offer__price-range">до</span> 5%
                     </div>
-                    <div class="offers__price-desc">Кэшбек за любые покупки</div>
+                    <div class="offer__price-desc">Кэшбек за любые покупки</div>
                   </div>
                 </div>
-                <div class="offers__btn-wrapper">
+                <div class="offer__btn-wrapper">
                   <a href="#" class="btn btn_color_black">Подробнее</a> <!--модификатор ключ-значение-->                
                 </div>
               </div>
             </li>
-            <li class="offers__item offers__item_theme_gold"> <!--модификатор ключ-значение-->            
-              <div class="offers__header">
-                <img src="./images/icons/cards/card_gold.png" alt="gold card" class="offers__header-img">
+            <li class="offers__item offer offer__item_theme_gold"> <!--модификатор ключ-значение--> <!--примесь для переиспользования блока при необходимости-->             
+              <div class="offer__header">
+                <img src="./images/icons/cards/card_gold.png" alt="gold card" class="offer__header-img">
               </div>
-              <div class="offers__content">
-                <h3 class="offers__title">Карта «Платинум»</h3>
-                <div class="offers__prices">
-                  <div class="offers__prices-cell">
-                    <div class="offers__price">490 Р.-</div>
-                    <div class="offers__price-desc">Обслуживание карты</div>
+              <div class="offer__content">
+                <h3 class="offer__title">Карта «Платинум»</h3>
+                <div class="offer__prices">
+                  <div class="offer__prices-cell">
+                    <div class="offer__price">490 Р.-</div>
+                    <div class="offer__price-desc">Обслуживание карты</div>
                   </div>
-                  <div class="offers__prices-cell">
-                    <div class="offers__price">
+                  <div class="offer__prices-cell">
+                    <div class="offer__price">
                       <!--для того, чтобы сделать "до" меньше-->
-                      <span class="offers__price-range">до</span> 6%
+                      <span class="offer__price-range">до</span> 6%
                     </div>
-                    <div class="offers__price-desc">Кэшбек за любые покупки</div>
+                    <div class="offer__price-desc">Кэшбек за любые покупки</div>
                   </div>
                 </div>
-                <div class="offers__btn-wrapper">
+                <div class="offer__btn-wrapper">
                   <a href="#" class="btn btn_color_black">Подробнее</a> <!--модификатор ключ-значение-->                
                 </div>
               </div>
