--- a/service.html
+++ b/service.html
@@ -170,51 +170,55 @@
         </section>
       </div>  
 
-      <footer class="footer-container"> 
-        <div class="container">
+      <footer class="footer-container"> <!--только на главной-->
+        <div class="container"> 
           <div class="footer"> <!--для переиспользования-->
-            <a href="/" class="logo">
-              <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
-            </a>
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="/" class="menu__link">Главная</a>
+            <div class="footer__col">
+              <a href="/" class="logo">
+                <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
+              </a>
+              <nav class="menu">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="/" class="menu__link">Главная</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="./service.html" class="menu__link">Услуги</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Отзывы</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer__col footer__col_align_right">
+              <ul class="socials">
+                <li class="socials__item"> 
+                  <a href="#" class="socials__link">
+                    <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon">
+                  </a>
                 </li>
-                <li class="menu__item">
-                  <a href="./service.html" class="menu__link">Услуги</a>
+                <li class="socials__item"> 
+                  <a href="#" class="socials__link">
+                    <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon">
+                  </a>
                 </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                <li class="socials__item"> 
+                  <a href="#" class="socials__link">
+                    <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon">
+                  </a>
+                </li>
+                <li class="socials__item"> 
+                  <a href="#" class="socials__link">
+                    <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon">
+                  </a>
                 </li>
               </ul>
-            </nav>
-            <ul class="socials">
-              <li class="socials__item"> 
-                <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon">
-                </a>
-              </li>
-              <li class="socials__item"> 
-                <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon">
-                </a>
-              </li>
-              <li class="socials__item"> 
-                <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon">
-                </a>
-              </li>
-              <li class="socials__item"> 
-                <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon">
-                </a>
-              </li>
-            </ul>
-            <address class="contacts">
-              <div class="contacts__desc">Бесплатный звонок по России</div>
-              <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-            </address>
+              <address class="contacts">
+                <div class="contacts__desc">Бесплатный звонок по России</div>
+                <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+              </address>
+            </div>
           </div>
         </div>
       </footer>
