Неделя 3. Секция услуг (не PP)

--- a/service.html
+++ b/service.html
@@ -61,47 +61,51 @@
         </div>
       </section>
 
-      <main class="services-container">
+      <main class="page-content">
         <div class="container">
           <ul class="services">
-            <li class="services__item">
-              <div class="services__header">
-                <img src="./images/content/service/key.jpg" alt="car loan" class="services__header-img">
-              </div>
-              <div class="services__text-content">
-                <h3 class="services__title">Автокредит под 17% годовых на 1000 лет + страховка</h3>
-                <div class="services__desc-text">
-                  <p>
-                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
-                    менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
-                    выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
-                    универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений
-                    в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
-                    восприятия.
-                  </p>
+            <a href="#" class="service">
+              <li class="services__item"> 
+                <div class="service__img">
+                  <img src="./images/content/service/key.jpg" alt="car loan" class="service__img-elem">
                 </div>
-                <a href="#" class="btn btn_color_black">Подробнее</a>
-              </div>
-            </li>
-            <li class="services__item">
-              <div class="services__header">
-                <img src="./images/content/service/couple.jpg" alt="mortgage" class="services__header-img">
-              </div>
-              <div class="services__text-content">
-                <h3 class="services__title">Ипотека под 9% годовых на 35 лет и душу впридачу</h3>
-                <div class="services__desc-text">
-                  <p>
-                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
-                    менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
-                    выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
-                    универсальный код речей.
-                  </p>
+                <div class="service__text-content">
+                  <h2 class="service__title">Автокредит под 17% годовых на 1000 лет + страховка</h2>
+                  <div class="service__desc">
+                    <p>
+                      Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
+                      менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
+                      выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
+                      универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений
+                      в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
+                      восприятия.
+                    </p>
+                  </div>
+                  <div class="btn btn_color_black service__btn">Подробнее</div> <!--МИКС-->
                 </div>
-                <a href="#" class="btn btn_color_black">Подробнее</a>
-              </div>
-            </li>
+              </li>
+            </a>
+            <a href="#" class="service">
+              <li class="services__item">
+                <div class="service__img">
+                  <img src="./images/content/service/couple.jpg" alt="mortgage" class="service__img-elem">
+                </div>
+                <div class="service__text-content">
+                  <h2 class="service__title">Ипотека под 9% годовых на 35 лет и душу впридачу</h2>
+                  <div class="service__desc">
+                    <p>
+                      Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
+                      менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
+                      выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
+                      универсальный код речей.
+                    </p>
+                  </div>
+                  <div class="btn btn_color_black service__btn">Подробнее</div> <!--МИКС-->
+                </div>
+              </li>
+            </a>
           </ul>
-          <div class="paginator">
+          <div class="paginator paginator_theme_light"> <!--модификатор-->
             <div class="paginator__display">Страница 1 из 7</div>
             <ul class="paginator__list">
               <li class="paginator__item paginator__item_active">
