--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
               </a>
               <nav class="menu">
                 <ul class="menu__list">
-                  <li class="menu__item">
+                  <li class="menu__item menu__item_active"> <!--модификатор-->
                     <a href="/" class="menu__link">Главная</a>
                   </li>
-                  <li class="menu__item menu__item_active">
-                    <!--модификатор-->
+                  <li class="menu__item">                    
                     <a href="./service.html" class="menu__link">Услуги</a>
                   </li>
                   <li class="menu__item">
