Неделя 3. Партнеры (не PP)

--- a/service.html
+++ b/service.html
@@ -135,53 +135,51 @@
         </div>
       </main>
 
-      <section class="partners-container">
+      <section class="inner-section inner-section_bg_grey"> <!--для переиспользования--> <!--модификатор-->
         <div class="container">
-          <div class="partners">
-            <h2 class="partners__title">Партнеры</h2>
-            <ul class="partners__list">
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/yandex.png" alt="yandex icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/rambler.png" alt="rambler icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/tinkoff.png" alt="tinkoff icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/sberbank.png" alt="sberbank icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/renessans.png" alt="renaissance icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/vtb.png" alt="vtb icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/western.png" alt="eastern bank icon" class="partners__icon">
-                </a>
-              </li>
-              <li class="partners__item">
-                <a href="#" class="partners__link">
-                  <img src="./images/icons/partners/openbank.png" alt="open bank icon" class="partners__icon">
-                </a>
-              </li>
-            </ul>
-          </div>
+          <h2 class="inner-section__title">Партнеры</h2>
+          <ul class="partners">
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/yandex.png" alt="yandex logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/rambler.png" alt="rambler logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/tinkoff.png" alt="tinkoff logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/sberbank.png" alt="sberbank logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/renessans.png" alt="renaissance logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/vtb.png" alt="vtb logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/western.png" alt="eastern bank logo" class="partners__logo">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="#" class="partners__link">
+                <img src="./images/icons/partners/openbank.png" alt="open bank logo" class="partners__logo">
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </div>
