--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
                     <a href="./service.html" class="menu__link">Услуги</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#" class="menu__link">Отзывы</a>
+                    <a href="./reviews.html" class="menu__link">Отзывы</a>
                   </li>
                 </ul>
               </nav>
@@ -202,7 +202,7 @@
                   <a href="./service.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
