--- a/reviews.html
+++ b/reviews.html
@@ -239,7 +239,47 @@
       <section class="inner-section inner-section_bg_grey"> <!--для переиспользования--> <!--модификатор-->
         <div class="container">
           <h2 class="inner-section__title">Оставьте отзыв</h2>
-          
+          <form action="" method="post" class="review-form">
+            <input type="text" class="review-form__name" placeholder="Ваше имя">
+            <input type="text" class="review-form__vk" placeholder="Ссылка на профиль VK">
+            <textarea name="" id="" cols="30" rows="10" class="review-form__text" placeholder="Напишите свой честный отзыв ;)"></textarea>
+            <h5 for="" class="review-form__radio-title">Какими услугами банка пользуетесь?</h5>
+            <ul class="review-form__radio-services">
+              <li class="review-form__radio-service">
+                <button class="review-form__btn">
+                  <h6 class="review-form__btn-name">Карта базовая</h6>
+                  <input type="radio" name="services" id="base-card" class="review-form__btn-input">
+                </button>
+              </li>
+              <li class="review-form__radio-service">
+                
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+              <li class="review-form__radio-service">
+
+              </li>
+            </ul>
+          </form>
         </div>
       </section>
     </div>
