Неделя 4. Приветственная страница + некоторые правки

--- a/reviews.html
+++ b/reviews.html
@@ -19,7 +19,7 @@
           <!--модификатор-->
           <header class="header header_pt_small"> <!--модификатор-->
             <div class="header__col">
-              <a href="/" class="logo">
+              <a href="/" class="logo logo_horizontal"> <!--модификатор-->
                 <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
               </a>
               <nav class="menu">
@@ -289,7 +289,7 @@
         <div class="footer">
           <!--для переиспользования-->
           <div class="footer__col">
-            <a href="/" class="logo">
+            <a href="/" class="logo logo_horizontal"> <!--модификатор-->
               <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
             </a>
             <nav class="menu">
