--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <!--модификатор-->
           <header class="header">
             <div class="header__col">
-              <a href="/" class="logo">
+              <a href="/" class="logo logo_horizontal"> <!--модификатор-->
                 <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
               </a>
               <nav class="menu">
@@ -232,7 +232,7 @@
         <div class="footer">
           <!--для переиспользования-->
           <div class="footer__col">
-            <a href="/" class="logo">
+            <a href="/" class="logo logo_horizontal"> <!--модификатор-->
               <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
             </a>
             <nav class="menu">
