Неделя 4. Иконки социалок в спрайте

--- a/reviews.html
+++ b/reviews.html
@@ -308,24 +308,24 @@
           </div>
           <div class="footer__col footer__col_align_right">
             <ul class="socials">
-              <li class="socials__item">
+              <li class="socials__item socials__item_icon_telegram">
                 <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon">
+                  <!-- <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon"> -->
                 </a>
               </li>
-              <li class="socials__item">
+              <li class="socials__item socials__item_icon_vk">
                 <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon">
+                  <!-- <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon"> -->
                 </a>
               </li>
-              <li class="socials__item">
+              <li class="socials__item socials__item_icon_fb">
                 <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon">
+                  <!-- <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon"> -->
                 </a>
               </li>
-              <li class="socials__item">
+              <li class="socials__item socials__item_icon_insta">
                 <a href="#" class="socials__link">
-                  <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon">
+                  <!-- <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon"> -->
                 </a>
               </li>
             </ul>
