Неделя 4. Отзывы. Стили отзывов и баннера

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                       <!--для того, чтобы сделать "до" меньше-->
                       <span class="offer__price-range">до</span> 4%
                     </div>
-                    <div class="offer__price-desc">Кэшбек за любые покупки</div>
+                    <div class="offer__price-desc">Кэшбек&nbsp;за&nbsp;любые покупки</div>
                   </div>
                 </div>
                 <div class="offer__btn-wrapper">
@@ -107,7 +107,7 @@
                       <!--для того, чтобы сделать "до" меньше-->
                       <span class="offer__price-range">до</span> 5%
                     </div>
-                    <div class="offer__price-desc">Кэшбек за любые покупки</div>
+                    <div class="offer__price-desc">Кэшбек&nbsp;за&nbsp;любые покупки</div>
                   </div>
                 </div>
                 <div class="offer__btn-wrapper">
@@ -134,7 +134,7 @@
                       <!--для того, чтобы сделать "до" меньше-->
                       <span class="offer__price-range">до</span> 6%
                     </div>
-                    <div class="offer__price-desc">Кэшбек за любые покупки</div>
+                    <div class="offer__price-desc">Кэшбек&nbsp;за&nbsp;любые покупки</div>
                   </div>
                 </div>
                 <div class="offer__btn-wrapper">
