--- a/reviews.html
+++ b/reviews.html
@@ -72,8 +72,8 @@
                 <div class="review__userdata">
                   <a href="#" class="review__user">Иван Петрович</a>
                   <ul class="review__tags">
-                    <li class="review__tag-item tag">Карта базовая</li>
-                    <li class="review__tag-item tag">Ипотека на 10 лет</li>
+                    <li class="review__tag-item tag tag_bg_green">Карта базовая</li> <!--модификатор-->
+                    <li class="review__tag-item tag tag_bg_green">Ипотека на 10 лет</li> <!--модификатор-->
                   </ul>
                 </div>
               </div>
@@ -98,7 +98,7 @@
                 <div class="review__userdata">
                   <a href="#" class="review__user">Лиза Сидорова</a>
                   <ul class="review__tags">
-                    <li class="review__tag-item tag">Карта оптима</li>
+                    <li class="review__tag-item tag tag_bg_green">Карта оптима</li> <!--модификатор-->
                   </ul>
                 </div>
               </div>
@@ -123,7 +123,7 @@
                 <div class="review__userdata">
                   <a href="#" class="review__user">Екатерина Жмых</a>
                   <ul class="review__tags">
-                    <li class="review__tag-item tag">Ипотека на 10 лет</li>
+                    <li class="review__tag-item tag tag_bg_green">Ипотека на 10 лет</li> <!--модификатор-->
                   </ul>
                 </div>
               </div>
@@ -150,12 +150,12 @@
                 <div class="review__userdata">
                   <a href="#" class="review__user">Антон Игоревич</a>
                   <ul class="review__tags">
-                    <li class="review__tag-item tag">Автокредит на 5 лет</li>
+                    <li class="review__tag-item tag tag_bg_green">Автокредит на 5 лет</li> <!--модификатор-->
                   </ul>
                 </div>
               </div>
               <div class="review__text-content">
-                <h3 class="review__title">Операторы отзывчивые и вежливые!</h3>
+                <h3 class="review__title">Операторы отзывчивые и&nbsp;вежливые!</h3>
                 <div class="review__desc">
                   <p>
                     Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
@@ -198,13 +198,10 @@
         </div>
       </main>
 
-      <section class="banner-container">
+      <section class="banner">
         <div class="container">
-          <div class="banner">
+          <div class="banner__content">
             <h2 class="banner__title">LionBank-Онлайн Простой способ зайти в банк</h2>
-            <div class="banner__img-wrapper">
-              <img src="./images/decor/phone-n-hand.png" alt="lion bank app" class="banner__img">
-            </div>
           </div>
         </div>
       </section>
