--- a/service.html
+++ b/service.html
@@ -92,7 +92,7 @@
                   <img src="./images/content/service/couple.jpg" alt="mortgage" class="service__img-elem">
                 </div>
                 <div class="service__text-content">
-                  <h2 class="service__title">Ипотека под 9% годовых на 35 лет и душу впридачу</h2>
+                  <h2 class="service__title">Ипотека под 9% годовых на&nbsp;35 лет и душу впридачу</h2>
                   <div class="service__desc">
                     <p>
                       Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
