Неделя 4. Отзывы. Форма без тэгов (не PP)

--- a/reviews.html
+++ b/reviews.html
@@ -209,43 +209,47 @@
       <section class="inner-section inner-section_bg_grey"> <!--для переиспользования--> <!--модификатор-->
         <div class="container">
           <h2 class="inner-section__title">Оставьте отзыв</h2>
-          <form action="" method="post" class="review-form">
-            <input type="text" class="review-form__name" placeholder="Ваше имя">
-            <input type="text" class="review-form__vk" placeholder="Ссылка на профиль VK">
-            <textarea name="" id="" cols="30" rows="10" class="review-form__text" placeholder="Напишите свой честный отзыв ;)"></textarea>
-            <h5 for="" class="review-form__radio-title">Какими услугами банка пользуетесь?</h5>
-            <ul class="review-form__radio-services">
-              <li class="review-form__radio-service">
-                <button class="review-form__btn">
-                  <h6 class="review-form__btn-name">Карта базовая</h6>
-                  <input type="radio" name="services" id="base-card" class="review-form__btn-input">
+          <form action="" method="" class="form">
+            <div class="form__row">
+              <input type="text" class="form__input" placeholder="Ваше имя">
+              <input type="text" class="form__input" placeholder="Ссылка на профиль VK">
+            </div>
+            <div class="form__row">
+              <textarea name="" id="" cols="30" rows="10" class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв ;)"></textarea> <!--модификатор-->
+            </div>
+            <h5 for="" class="form__radio-title">Какими услугами банка пользуетесь?</h5>
+            <ul class="form__radio-services">
+              <li class="form__radio-service">
+                <button class="form__btn">
+                  <h6 class="form__btn-name">Карта базовая</h6>
+                  <input type="radio" name="services" id="base-card" class="form__btn-input">
                 </button>
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
                 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
-              <li class="review-form__radio-service">
+              <li class="form__radio-service">
 
               </li>
             </ul>
